--- a/sites/stackexchange.styl
+++ b/sites/stackexchange.styl
@@ -72,12 +72,17 @@ pre code
             
 // ** Header
 
-.topbar
+.so-header
     background-color color-background-highlight-extra-less
     color emphasized
 
     a
         color green
+
+    .navigation .-list .-item :hover
+        background-color green
+        color emphasized-more-more
+
 
 .topbar-dialog
     background-color()
@@ -98,10 +103,6 @@ pre code
 #header
     background-color color-background-highlight-extra-less
                 
-#hmenus .nav ul li a
-    background-color green
-    color emphasized-more-more
-
 #question-header
     .question-hyperlink
         color emphasized
@@ -154,6 +155,10 @@ div.answered-accepted
         color emphasized
     .question-hyperlink
         color cyan
+
+.newuser
+    background-color highlight
+    color emphasized
 
 // *** Labels
 
